# claude-codex-local

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  guide.example.md  idea.md  poc_bridge.py  prd.md  pyproject.toml  requirements-dev.txt  tasks.md  validate.md  wizard.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  publish.yml
claude_codex_local/: __init__.py  bridge.py  core.py  wizard.py
docs/: ARCHITECTURE.md  CHANGELOG.md  DEPLOYMENT.md  DEVELOPMENT.md  index.html  poc-architecture.md  poc-bootstrap.md  poc-proof.md  poc-wizard.md
scripts/: e2e_smoke.sh
tests/: conftest.py  test_core_unit.py  test_e2e.py  test_e2e_llamacpp_real.py  test_local_real_binaries.py  test_poc_bridge_unit.py  test_supplementary.py  test_vllm_e2e.py  test_vllm_unit.py  test_wizard_unit.py
tests/e2e_docker/: run_e2e_docker.sh
