[project]
name = "claude-codex-local"
version = "0.9.0"
description = "Local backend bridge for Claude Code and Codex."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.10"
keywords = ["claude", "codex", "llm", "local", "ollama", "lm-studio", "bridge", "cli"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries",
  "Topic :: Utilities",
]
dependencies = [
  "questionary>=2.0",
  "rich>=13.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.6",
  "mypy>=1.11",
  "bandit>=1.7",
  "detect-secrets>=1.5",
  "pre-commit>=3.8",
]

[project.urls]
Homepage = "https://github.com/luongnv89/claude-codex-local"
Repository = "https://github.com/luongnv89/claude-codex-local"
"Bug Tracker" = "https://github.com/luongnv89/claude-codex-local/issues"
Changelog = "https://github.com/luongnv89/claude-codex-local/blob/main/docs/CHANGELOG.md"

[project.scripts]
ccl = "claude_codex_local.wizard:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["claude_codex_local*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q --strict-markers"
markers = [
  "local: tests that exercise real ollama/lms/claude/codex/llmfit binaries; auto-skipped if the tool is missing",
  "real_llamacpp: tests that require a real llama-server binary and a downloaded GGUF model; skipped in CI",
]

[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = [".venv", ".claude-codex-local", "__pycache__"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM"]
ignore = ["E501", "B008"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B", "SIM"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
check_untyped_defs = false
warn_unused_ignores = true
exclude = ["\\.venv", "\\.claude-codex-local", "tests/"]

[dependency-groups]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.6",
  "mypy>=1.11",
  "bandit>=1.7",
  "detect-secrets>=1.5",
  "pre-commit>=3.8",
]
